# xmidi32

./: .gitignore  A32MP.MAK  A32WR.MAK  A32ZF.MAK  AIL32.ASM  AUDIT.md  DLLLOAD.C  Makefile  PROGRESS.md  README.md  SAMPLE.c  STP32.C  VP32.C  WORK_DONE.md  XP32.C  backend.c  backend.h  dro2txt.py  dump_wav.c  opl3.c  opl3.h  out.txt  rundebug.bat  sdl_audio.c  test_args.c  test_run.bat  test_xmidi.c  timbre_bank.c  timbre_bank.h  xmi_play.c
ail32_V105/: DLL.H  MIX32.C  READ.ME  SPKR32.INC
src/: backend.h  dump_wav.c  fat_opl.c  sample_ad.c  sample_opl.c  sdl_audio.c  sdl_audio.h  sdltest.c  timbre_bank.c  timbre_bank.h  xmi_play.c  xmidi32.h  xmidi32_api.c  xmidi32_backend.h  xmidi32_channel.c  xmidi32_config.h  xmidi32_control.c  xmidi32_control.h  xmidi32_count.c  xmidi32_critical.h  xmidi32_dispatch.c  xmidi32_driver.h  xmidi32_find_seq.c  xmidi32_flush.c  xmidi32_globals.c  xmidi32_init.c  xmidi32_meta.c  xmidi32_midi.c  xmidi32_note_on.c  xmidi32_register.c  xmidi32_reset.c  xmidi32_reset.h  xmidi32_serve.c  xmidi32_sysex.c  xmidi32_tempo.c  xmidi32_timbre.c  xmidi32_timbre_internal.h  xmidi32_types.h  xmidi32_utils.c  xmidi32_utils.h  (+6 more)
xmi/: analyze_compare.py  analyze_dro.py  capture.txt  demo.dro  ref.txt
xmi_to_midi_src/: CMakeLists.txt  file.cpp  file.h  main.cpp  xmi.cpp  xmi.h
